# rag_architect

classic_rag/: README.md  pyproject.toml
classic_rag/app/: .env  api.py  config.py  embedding.py  generation.py  ingestion.py  rearanker.py  retrieval.py
classic_rag/frontend/: app.py
enhanced_classic_rag/: IMPLEMENTATION.md  README.md  api.py  main.py  pyproject.toml  requirements.txt
enhanced_classic_rag/app/: __init__.py  generation.py
enhanced_classic_rag/app/core/: config.py
enhanced_classic_rag/app/db/: sqlite_manager.py
enhanced_classic_rag/app/ingestion/: __init__.py  chunk_hasher.py  chunker.py  document_loader.py  hash_manager.py  incremental_diff.py  metadata_builder.py
enhanced_classic_rag/app/pipeline/: __init__.py  processing_pipeline.py
enhanced_classic_rag/app/vectorstore/: __init__.py  pinecone_manager.py  reranker.py
enhanced_classic_rag/frontend/: app.py
enhanced_rag_cache/: .gitignore  IMPLEMENTATION.md  README.md  _test_plain_tables.py  api.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
enhanced_rag_cache/data/: .gitkeep  rag_cache.db
enhanced_rag_cache/docs/: architecture.md
enhanced_rag_cache/frontend/: app.py
enhanced_rag_cache/src/: __init__.py  ingestion.py  pipeline.py
enhanced_rag_cache/src/caching/: __init__.py  base.py  cache_manager.py  parent_cache.py  redis_backend.py  redis_client.py  sqlite_backend.py
enhanced_rag_cache/src/chunking/: __init__.py  parent_child.py  structure_recursive.py  table_aware.py
enhanced_rag_cache/src/generation/: __init__.py  generator.py
enhanced_rag_cache/src/retrieval/: __init__.py  parent_merger.py  pinecone_manager.py  reranker.py  retriever.py
enhanced_rag_cache/src/utils/: __init__.py  config_loader.py  embeddings.py  exceptions.py  image_enricher.py  logger.py  pdf_to_markdown.py
enhanced_rag_cache/tests/: test_caching.py  test_chunking.py  test_generation.py  test_ingestion.py  test_retrieval.py
enhanced_rag_cache/tests/output/: structure_recursive_2602.03442v1_rag_pdf-1-9.txt
rag_pageindex/: README.md  api.py  doc_id_cache.json  main.py  pageindex_rag.py  pyproject.toml
rag_pageindex/frontend/: README.md  app.py  requirements.txt
rag_pageindex/output/pi-cmm31t93n05mo0ao9sox9un2a/: answer.json  node_search.json  tree.json
